// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextEditor Image Gallery component component snapshot: loaded but no images, show empty gallery 1`] = `
<div
  className="gallery p-4 bg-gray-100"
  style={
    Object {
      "height": "375px",
    }
  }
>
  <FormattedMessage />
</div>
`;

exports[`TextEditor Image Gallery component component snapshot: loaded but search returns no images, show 0 search result gallery 1`] = `
<div
  className="gallery p-4 bg-gray-100"
  style={
    Object {
      "height": "375px",
    }
  }
>
  <FormattedMessage
    defaultMessage="No search results."
    description="Label for when search returns nothing."
    id="authoring.selectionmodal.emptySearchLabel"
  />
</div>
`;

exports[`TextEditor Image Gallery component component snapshot: loaded, show gallery 1`] = `
<Scrollable
  className="gallery bg-gray-100"
  style={
    Object {
      "height": "375px",
    }
  }
>
  <div
    className="p-4"
  >
    <SelectableBox.Set
      columns={1}
      name="images"
      onChange={[MockFunction props.onHighlightChange]}
      type="radio"
      value="props.highlighted"
    >
      <GalleryCard
        asset={
          Object {
            "id": 1,
          }
        }
        key="1"
        showId={false}
      />
      <GalleryCard
        asset={
          Object {
            "id": 2,
          }
        }
        key="2"
        showId={false}
      />
      <GalleryCard
        asset={
          Object {
            "id": 3,
          }
        }
        key="3"
        showId={false}
      />
    </SelectableBox.Set>
  </div>
</Scrollable>
`;

exports[`TextEditor Image Gallery component component snapshot: not loaded, show spinner 1`] = `
<Spinner
  animation="border"
  className="mie-3"
  screenReaderText="loading..."
/>
`;
